--- a/app/src/index.css
+++ b/app/src/index.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 body {
+  @apply bg-green-50 text-green-800;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
@@ -10,6 +11,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+header {
+  height: 5rem;
+}
+
+main {
+  height: calc(100vh - 8rem);
+  padding: 0.5rem;
+}
+
+footer {
+  height: 3rem;
 }
